<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".audiluActivity">

    <View
        android:id="@+id/viewHeader"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/rosaAudilu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:id="@+id/imgViewLogoAudilu"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/logoaudilucircularsinfondo"
        app:layout_constraintBottom_toBottomOf="@id/viewHeader"
        app:layout_constraintStart_toStartOf="@id/viewHeader" />

    <TextView
        android:id="@+id/txtNombreApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/audilu"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/viewHeader"
        app:layout_constraintStart_toEndOf="@id/imgViewLogoAudilu"
        app:layout_constraintTop_toTopOf="@id/viewHeader" />

    <Button
        android:id="@+id/btn_Desconnect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="496dp"
        android:text="@string/desconectar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_Desconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Connect"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="170dp"
                android:layout_marginBottom="10dp"
                android:background="@color/purple_500"
                android:text="@string/conectar" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/purple_500"
                android:text="@string/buscar" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/valSonido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sonido" />

            <TextView
                android:id="@+id/valMov"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mov" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/valTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temp" />

            <TextView
                android:id="@+id/valHum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hum" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>